feat: more api and validate
