# router/app.go
@@ -17,6 +17,10 @@ func Router() *gin.Engine {
 	r.GET("/ping", service.GetPing)
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
+	r.GET("/user/createUser", service.CreateUser)
+	r.GET("/user/getUserByID", service.GetUserByID)
+	r.GET("/user/deleteUserByID", service.DeleteUserByID)
+	r.POST("/user/updateUser", service.UpdateUser)
 
 	return r
 }
